# eval_board

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  eslint.config.mjs  instrumentation.ts  middleware.ts  next.config.js  package.json  pnpm-lock.yaml  tsconfig.json  tsconfig.tsbuildinfo
app/: globals.css  layout.tsx  page.tsx
app/api/datasets/: route.ts
app/api/images/: route.ts
app/api/view/: route.ts
app/login/: page.tsx
components/: home-page.tsx  use-view-persistence.tsx  view-context.tsx
components/datasets/: dataset-gallery.tsx  dataset-sheet.tsx  datasets-page.tsx
components/grid/: artifact-image.tsx  grid-page.tsx  image-detail-view.tsx  image-viewer.tsx
components/models/: model-gallery.tsx  model-sheet.tsx  models-page.tsx
components/shared/: image-gallery.tsx  image-lightbox.tsx  side-sheet.tsx
components/ui/: searchable-dropdown.tsx
docker/: entrypoint.sh
docs/: architecture.md  setup.md
lib/: auth.ts  prisma.ts  stableStringify.ts  types.ts
lib/hooks/: useDatasets.ts  useGridData.ts  useModels.ts
lib/server/: image-cache.ts  ingest-service.ts  json-response.ts  model-service.ts  s3-url.ts  view-storage.ts
lib/validation/: grid.ts
prisma/: schema.prisma
python/: README.md  pyproject.toml
python/eval_board_client/: cli.py  client.py  s3_manifest.py
python/eval_board_client.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
python/examples/: ingest_100k_upscale.py  ingest_basic.py  ingest_edit.py  ingest_edit_eval.py  ingest_product_edits_csv_eval.py
(+14 files in other folders)
