[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eval-board-client"
version = "0.1.0"
description = "Python client + CLI for ingesting diffusion model outputs into the Eval Board dashboard."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Eval Board Team", email = "ml-platform@example.com" }
]
dependencies = [
  "requests>=2.31.0",
  "typer>=0.9.0",
  "rich>=13.6.0",
  "boto3>=1.28.0",
  "pydantic>=2.5.0"
]

[project.optional-dependencies]
dev = [
  "pytest>=7.4.0",
  "mypy>=1.7.0",
  "types-requests>=2.31.0.6"
]

[project.scripts]
eval-board = "eval_board_client.cli:app"

[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
